assets/styles.css
/* ... */
@font-face {
  font-family: 'OpenSansSemiboldItalic';
  src: url("../fonts/OpenSans-SemiboldItalic-webfont.eot");
  src: url("../fonts/OpenSans-SemiboldItalic-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-SemiboldItalic-webfont.woff") format("woff"), url("../fonts/OpenSans-SemiboldItalic-webfont.ttf") format("truetype"), url("../fonts/OpenSans-SemiboldItalic-webfont.svg#OpenSansSemiboldItalic") format("svg");
  font-weight: normal;
  font-style: normal;
  -webkit-font-smoothing: antialiased;
}

@font-face {
  font-family: 'OpenSansBold';
  src: url("../fonts/OpenSans-Bold-webfont.eot");
  src: url("../fonts/OpenSans-Bold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-Bold-webfont.woff") format("woff"), url("../fonts/OpenSans-Bold-webfont.ttf") format("truetype"), url("../fonts/OpenSans-Bold-webfont.svg#OpenSansBold") format("svg");
  font-weight: normal;
  font-style: normal;
  -webkit-font-smoothing: antialiased;
}

@font-face {
  font-family: 'OpenSansBoldItalic';
  src: url("../fonts/OpenSans-BoldItalic-webfont.eot");
  src: url("../fonts/OpenSans-BoldItalic-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-BoldItalic-webfont.woff") format("woff"), url("../fonts/OpenSans-BoldItalic-webfont.ttf") format("truetype"), url("../fonts/OpenSans-BoldItalic-webfont.svg#OpenSansBoldItalic") format("svg");
  font-weight: normal;
  font-style: normal;
  -webkit-font-smoothing: antialiased;
}

/* MeyerWeb Reset */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font: inherit;
    vertical-align: baseline;
}


/* Base text styles */

body {
    padding:10px 50px 0 0;
    font: 14px/1.5 "OpenSansRegular", "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 16px;
    color: #232323;
    background-color: #FBFAF7;
    margin: 0;
    line-height: 1.8em;
    -webkit-font-smoothing: antialiased;
}

h1, h2, h3, h4, h5, h6 {
    color:#232323;
    margin:36px 0 10px;
}

p, ul, ol, table, dl {
    margin:0 0 22px;
}

h1, h2, h3 {
    font-family: Arvo, Monaco, serif;
    line-height:1.3;
    font-weight: normal;
}

h1,h2, h3 {
    display: block;
    border-bottom: 1px solid #ccc;
    padding-bottom: 5px;
}

h1 {
    font-size: 30px;
}

h2 {
    font-size: 24px;
}

h3 {
    font-size: 18px;
}

h4, h5, h6 {
    font-family: Arvo, Monaco, serif;
    font-weight: 700;
}

a {
    color:#C30000;
    font-weight:200;
    text-decoration:none;
}

a:hover {
    text-decoration: underline;
}

a small {
    font-size: 12px;
}

em {
    font-style: italic;
}

strong {
    font-weight:700;
}

ul li {
    list-style: inside;
    padding-left: 25px;
}

ol li {
    list-style: decimal inside;
    padding-left: 20px;
}

blockquote {
    margin: 0;
    padding: 0 0 0 20px;
    font-style: italic;
}

dl, dt, dd, dl p {
    font-color: #444;
}

dl dt {
    font-weight: bold;
}

dl dd {
    padding-left: 20px;
    font-style: italic;
}

dl p {
    padding-left: 20px;
    font-style: italic;
}

hr {
    border:0;
    background:#ccc;
    height:1px;
    margin:0 0 24px;
}

/* Images */

legend {
    font-weight: bold;
    border-bottom: 1px solid #ddd;
    width: 90%;
}
/* Code blocks */

code, pre {
    font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
    color:#000;
    font-size:14px;
}

pre {
    padding: 4px 12px;
    background: #FDFEFB;
    border-radius:4px;
    border:1px solid #D7D8C8;
    overflow: auto;
    overflow-y: hidden;
    margin-bottom: 32px;
}

div.code {
    float: right;
    width: 530px;
}

/* Tables */

table.mini {
    margin: 2px 2px 2px 2px;
    border: 0;
}
td.mini {
    padding: 0px;
    background: #000;
}
td.mini_r {
    padding: 0px;
    background: #000;
    text-align: right;
    padding-right: 4px;
}

table {
    width:100%;
    border: 1px solid #ccc;
    margin-bottom: 32px;
    text-align: left;
}

th {
    font-family: 'Arvo', Helvetica, Arial, sans-serif;
    font-size: 18px;
    font-weight: normal;
    padding: 10px;
    background: #232323;
    color: #FDFEFB;
}

td {
    padding: 10px;
    background: #ccc;
}


/* Wrapper */
.wrapper {
    width: 1040px;
}


/* Header */

header {
    background-color: #171717;
    color: #FDFDFB;
    width:170px;
    min-width: 170px;
    float:left;
    border: 1px solid #000;
    -webkit-border-top-right-radius: 4px;
    -webkit-border-bottom-right-radius: 4px;
    -moz-border-radius-topright: 4px;
    -moz-border-radius-bottomright: 4px;
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
    padding: 20px 0 0 20px;
    margin: 30px 0 0 0;
    -webkit-font-smoothing: antialiased;
}

p.header {
    font-size: 16px;
}

h1.header {
    font-family: Arvo, sans-serif;
    font-size: 30px;
    font-weight: 300;
    line-height: 1.3em;
    border-bottom: none;
    margin-top: 0;
}


h1.header, a.header, a.name, header a{
    color: #fff;
}

a.header {
    text-decoration: underline;
}

a.name {
    white-space: nowrap;
}

header ul {
    list-style:none;
    padding:0;
}
/* ... */

